@@ -23,6 +23,7 @@ import dev.ultreon.quantum.registry.Registries;
 import dev.ultreon.quantum.util.NamespaceID;
 import dev.ultreon.quantum.util.RgbColor;
 
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 
@@ -52,7 +53,7 @@ public class FlatItemModel implements ItemModel {
         TextureRegion r = TextureManager.DEFAULT_TEX_REG.getTexture() == texture ? TextureManager.DEFAULT_TEX_REG : new TextureRegion(texture) ;
         item1.setUVRange(r);
 
-        var v1 = new VertexInfo();
+        VertexInfo v1 = new VertexInfo();
         item1.rect(
                 v1.setPos(0, 0, 0).setNor(1, 0, 0).setUV(0, 0),
                 v1.setPos(1, 0, 0).setNor(1, 0, 0).setUV(1, 0),
@@ -83,7 +84,7 @@ public class FlatItemModel implements ItemModel {
 
     @Override
     public Collection<NamespaceID> getAllTextures() {
-        return List.of(item.getId().mapPath(path -> "items/" + path));
+        return Arrays.asList(item.getId().mapPath(path -> "items/" + path));
     }
 
     @Override
