@@ -5,6 +5,7 @@ import dev.ultreon.quantum.api.neocommand.CommandReader;
 import dev.ultreon.quantum.api.neocommand.Parameter;
 import dev.ultreon.quantum.api.neocommand.SuggestionProvider;
 
+import java.util.Arrays;
 import java.util.List;
 
 public class IntArgumentType implements ArgumentType<Integer> {
@@ -35,7 +36,7 @@ public class IntArgumentType implements ArgumentType<Integer> {
 
     @Override
     public List<String> getExamples() {
-        return List.of("0", "1", "2", "3", "4", "5", "6", "7", "8", "9");
+        return Arrays.asList("0", "1", "2", "3", "4", "5", "6", "7", "8", "9");
     }
 
     public static Parameter<Integer> ints(String name) {
