@@ -9,6 +9,7 @@ import dev.ultreon.quantum.registry.RegistryKey;
 import dev.ultreon.quantum.server.QuantumServer;
 import dev.ultreon.quantum.util.NamespaceID;
 
+import java.util.Arrays;
 import java.util.List;
 
 public class RegistryEntryArgumentType<T> implements ArgumentType<T> {
@@ -40,7 +41,7 @@ public class RegistryEntryArgumentType<T> implements ArgumentType<T> {
 
     @Override
     public List<String> getExamples() {
-        return List.of(
+        return Arrays.asList(
                 "quantum:stone",
                 "quantum:blocks/stone",
                 "stone",
