@@ -8,6 +8,7 @@ import dev.ultreon.quantum.world.World;
 import dev.ultreon.quantum.world.vec.BlockVec;
 import org.jetbrains.annotations.NotNull;
 
+import java.util.Arrays;
 import java.util.List;
 
 public class CrateBlockEntity extends ContainerBlockEntity<CrateMenu> {
@@ -28,11 +29,11 @@ public class CrateBlockEntity extends ContainerBlockEntity<CrateMenu> {
 
     @Override
     public List<ItemSlot> getInputs() {
-        return List.of();
+        return Arrays.asList();
     }
 
     @Override
     public List<ItemSlot> getOutputs() {
-        return List.of();
+        return Arrays.asList();
     }
 }
