@@ -11,9 +11,11 @@ import dev.ultreon.quantum.world.vec.BlockVec;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Iterator;
 import java.util.List;
+import java.util.stream.Collectors;
 
 /**
  * A class that holds a bunch of item slots.
@@ -74,12 +76,12 @@ public class AdvancedCraftingMenu extends ContainerMenu {
 
     @Override
     public List<ItemSlot> getInputs() {
-        return List.of();
+        return Arrays.asList();
     }
 
     @Override
     public List<ItemSlot> getOutputs() {
-        return List.of();
+        return Arrays.asList();
     }
 
     /**
@@ -103,6 +105,11 @@ public class AdvancedCraftingMenu extends ContainerMenu {
 
     @Override
     public @NotNull Iterator<ItemStack> iterator() {
-        return Arrays.stream(this.slots).map(ItemSlot::getItem).iterator();
+        List<ItemStack> list = new ArrayList<>();
+        for (ItemSlot slot : this.slots) {
+            ItemStack item = slot.getItem();
+            list.add(item);
+        }
+        return list.iterator();
     }
 }
