@@ -6,6 +6,7 @@ import dev.ultreon.quantum.item.ItemStack;
 import dev.ultreon.quantum.item.Items;
 import dev.ultreon.quantum.util.NamespaceID;
 
+import java.util.Arrays;
 import java.util.List;
 
 public class Recipes {
@@ -26,69 +27,69 @@ public class Recipes {
 
     private static void advancedCrafting(RecipeManager recipes) {
         recipes.register(new NamespaceID("iron_pickaxe"), new CraftingRecipe(
-                List.of(new ItemStack(Items.IRON_INGOT, 3), new ItemStack(Items.STICK)),
+                Arrays.asList(new ItemStack(Items.IRON_INGOT, 3), new ItemStack(Items.STICK)),
                 new ItemStack(Items.IRON_PICKAXE, 1), true));
 
         recipes.register(new NamespaceID("iron_shovel"), new CraftingRecipe(
-                List.of(new ItemStack(Items.IRON_INGOT), new ItemStack(Items.STICK)),
+                Arrays.asList(new ItemStack(Items.IRON_INGOT), new ItemStack(Items.STICK)),
                 new ItemStack(Items.IRON_SHOVEL, 1), true));
 
         recipes.register(new NamespaceID("iron_axe"), new CraftingRecipe(
-                List.of(new ItemStack(Items.IRON_INGOT), new ItemStack(Items.STICK)),
+                Arrays.asList(new ItemStack(Items.IRON_INGOT), new ItemStack(Items.STICK)),
                 new ItemStack(Items.IRON_AXE, 2), true));
 
         recipes.register(new NamespaceID("blast_furnace"), new CraftingRecipe(
-                List.of(new ItemStack(Items.ROCK, 32), new ItemStack(Items.STICK, 4)),
+                Arrays.asList(new ItemStack(Items.ROCK, 32), new ItemStack(Items.STICK, 4)),
                 new ItemStack(Items.IRON_AXE, 2), true));
     }
 
     private static void crafting(RecipeManager recipes) {
         recipes.register(new NamespaceID("log_to_planks"), new CraftingRecipe(
-                List.of(new ItemStack(Items.LOG)),
+                Arrays.asList(new ItemStack(Items.LOG)),
                 new ItemStack(Items.PLANK, 8)));
 
         recipes.register(new NamespaceID("planks_to_stick"), new CraftingRecipe(
-                List.of(new ItemStack(Items.PLANK)),
+                Arrays.asList(new ItemStack(Items.PLANK)),
                 new ItemStack(Items.STICK, 4)));
 
         recipes.register(new NamespaceID("planks_to_block"), new CraftingRecipe(
-                List.of(new ItemStack(Items.PLANK, 8)),
+                Arrays.asList(new ItemStack(Items.PLANK, 8)),
                 new ItemStack(Items.PLANKS)));
 
         recipes.register(new NamespaceID("wooden_pickaxe"), new CraftingRecipe(
-                List.of(new ItemStack(Items.STICK), new ItemStack(Items.PLANK, 3)),
+                Arrays.asList(new ItemStack(Items.STICK), new ItemStack(Items.PLANK, 3)),
                 new ItemStack(Items.WOODEN_PICKAXE)));
 
         recipes.register(new NamespaceID("wooden_shovel"), new CraftingRecipe(
-                List.of(new ItemStack(Items.STICK), new ItemStack(Items.PLANK)),
+                Arrays.asList(new ItemStack(Items.STICK), new ItemStack(Items.PLANK)),
                 new ItemStack(Items.WOODEN_SHOVEL)));
 
         recipes.register(new NamespaceID("wooden_axe"), new CraftingRecipe(
-                List.of(new ItemStack(Items.STICK), new ItemStack(Items.PLANK, 2)),
+                Arrays.asList(new ItemStack(Items.STICK), new ItemStack(Items.PLANK, 2)),
                 new ItemStack(Items.WOODEN_AXE)));
 
         recipes.register(new NamespaceID("crafting_bench"), new CraftingRecipe(
-                List.of(new ItemStack(Items.PLANK, 8)),
+                Arrays.asList(new ItemStack(Items.PLANK, 8)),
                 new ItemStack(Items.CRAFTING_BENCH)));
 
         recipes.register(new NamespaceID("rock_to_cobblestone"), new CraftingRecipe(
-                List.of(new ItemStack(Items.ROCK, 4)),
+                Arrays.asList(new ItemStack(Items.ROCK, 4)),
                 new ItemStack(Items.COBBLESTONE)));
 
         recipes.register(new NamespaceID("stone_pickaxe"), new CraftingRecipe(
-                List.of(new ItemStack(Items.ROCK, 3), new ItemStack(Items.STICK)),
+                Arrays.asList(new ItemStack(Items.ROCK, 3), new ItemStack(Items.STICK)),
                 new ItemStack(Items.STONE_PICKAXE)));
 
         recipes.register(new NamespaceID("crate"), new CraftingRecipe(
-                List.of(new ItemStack(Items.PLANK, 8), new ItemStack(Items.STICK, 2)),
+                Arrays.asList(new ItemStack(Items.PLANK, 8), new ItemStack(Items.STICK, 2)),
                 new ItemStack(Items.CRATE)));
 
         recipes.register(new NamespaceID("stone_shovel"), new CraftingRecipe(
-                List.of(new ItemStack(Items.ROCK), new ItemStack(Items.STICK)),
+                Arrays.asList(new ItemStack(Items.ROCK), new ItemStack(Items.STICK)),
                 new ItemStack(Items.STONE_SHOVEL)));
 
         recipes.register(new NamespaceID("stone_axe"), new CraftingRecipe(
-                List.of(new ItemStack(Items.ROCK, 2), new ItemStack(Items.STICK)),
+                Arrays.asList(new ItemStack(Items.ROCK, 2), new ItemStack(Items.STICK)),
                 new ItemStack(Items.STONE_AXE)));
     }
 
