@@ -2,6 +2,7 @@ package dev.ultreon.quantum.text;
 
 import dev.ultreon.quantum.entity.player.Player;
 
+import java.util.Arrays;
 import java.util.List;
 
 public class ParseResult {
@@ -10,7 +11,7 @@ public class ParseResult {
     private final TextObject[] textObject;
 
     public static ParseResult error(Exception e) {
-        return new ParseResult(List.of(), TextObject.empty(), TextObject.empty(), MutableText.literal(e.getMessage()).setColor(ColorCode.RED));
+        return new ParseResult(Arrays.asList(), TextObject.empty(), TextObject.empty(), MutableText.literal(e.getMessage()).setColor(ColorCode.RED));
     }
 
     @Deprecated
