@@ -7,6 +7,7 @@ import dev.ultreon.quantum.ModOrigin;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 
@@ -34,7 +35,7 @@ public class TeaVMMod implements Mod {
 
     @Override
     public @NotNull Collection<String> getAuthors() {
-        return List.of("Qubilux");
+        return Arrays.asList("Qubilux");
     }
 
     @Override
@@ -44,6 +45,6 @@ public class TeaVMMod implements Mod {
 
     @Override
     public @Nullable Iterable<FileHandle> getRootPaths() {
-        return List.of(Gdx.files.internal("./"));
+        return Arrays.asList(Gdx.files.internal("./"));
     }
 }
